FLOCSSの修正・見直し

--- a/resources/sass/Layout/_article.scss
+++ b/resources/sass/Layout/_article.scss
@@ -20,7 +20,7 @@
     }
     &__sidebar {
         min-width: 25%;
-        background: $background-color_sub2;
+        background: $background-color_primary;
         @include mq(sm) {
             width: 100%;
         }
