--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -6,7 +6,7 @@
     line-height: 50px;
     transition: .3s;
     color: $font-color_default;
-    background-color: $background-color_sub2;
+    background-color: $background-color_primary;
     position: sticky;
     top: 0;
     z-index: 2;
