--- a/resources/sass/Object/Component/_form.scss
+++ b/resources/sass/Object/Component/_form.scss
@@ -17,6 +17,6 @@
     }
     &--search {
         padding: $space_s;
-        background-color: $background-color_sub;
+        background-color: $background-color_main;
     }
 }
