--- a/resources/sass/Object/Component/_toast.scss
+++ b/resources/sass/Object/Component/_toast.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    color: $background-color_sub;
+    color: $font-color_sub;
     font-weight: bold;
     opacity: .9;
     z-index: 3;
