--- a/resources/sass/Object/Component/_tooltip.scss
+++ b/resources/sass/Object/Component/_tooltip.scss
@@ -11,7 +11,7 @@
         line-height: 1.6em;
         color: $font-color_sub;
         border-radius: 4px;
-        background: $background-color_sub3;
+        background: $background-color_sub;
         z-index: 2;
         transform: translateX(-110%);
         @include mq(sm){
