--- a/resources/sass/Object/Project/_register.scss
+++ b/resources/sass/Object/Project/_register.scss
@@ -6,4 +6,5 @@
     line-height: 1.2;
     font-size: $font-size_m;
     border: 0.5px solid $boader-color_line;
+    background-color: $background-color_main;
 }
