--- a/resources/sass/Object/Project/_withdraw.scss
+++ b/resources/sass/Object/Project/_withdraw.scss
@@ -1,6 +1,6 @@
 .p-withdraw {
     display: flex;
-    background-color: $background-color_sub;
+    background-color: $background-color_main;
     &__button {
         display: flex;
         justify-content: center;
