--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  color: #434343;
+  font-size: 16px;
+  font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "\30D2\30E9\30AE\30CE\89D2\30B4\30B7\30C3\30AF   Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "\FF2D\FF33   \FF30\30B4\30B7\30C3\30AF", "MS PGothic", sans-serif;
+  -webkit-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
+          text-size-adjust: 100%;
+  letter-spacing: 0.1em;
+  scroll-behavior: smooth;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -134,22 +150,6 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-html,
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-  color: #434343;
-  font-size: 16px;
-  font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "\30D2\30E9\30AE\30CE\89D2\30B4\30B7\30C3\30AF   Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "\FF2D\FF33   \FF30\30B4\30B7\30C3\30AF", "MS PGothic", sans-serif;
-  -webkit-text-size-adjust: 100%;
-     -moz-text-size-adjust: 100%;
-          text-size-adjust: 100%;
-  letter-spacing: 0.1em;
-  scroll-behavior: smooth;
 }
 
 .l-article {
@@ -738,6 +738,7 @@ body {
 }
 
 .c-card__name {
+  max-height: 40px;
   font-weight: bold;
 }
 
@@ -773,7 +774,6 @@ body {
 }
 
 .c-card__price {
-  width: 25%;
   padding: 8px 0 8px 8px;
   right: 0px;
   bottom: 55px;
@@ -782,7 +782,6 @@ body {
 
 @media screen and (max-width: 414px) {
   .c-card__price {
-    width: 30%;
     bottom: 48px;
   }
 }
@@ -1450,12 +1449,12 @@ body {
 
 .c-textarea {
   width: 100%;
-  padding: 8px;
   margin: 16px 0;
+  padding: 8px;
   box-sizing: border-box;
+  font-size: 16px;
   border: 1px solid #434343;
   background: #f6f5f4;
-  font-size: 16px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1578,6 +1577,7 @@ body {
 
 .p-mypage {
   padding: 16px;
+  background-color: #fefefe;
 }
 
 @media screen and (max-width: 414px) {
@@ -1612,6 +1612,7 @@ body {
 
 .p-product {
   padding: 24px 16px;
+  background-color: #fefefe;
 }
 
 @media screen and (max-width: 414px) {
@@ -1654,20 +1655,13 @@ body {
   line-height: 1.2;
   font-size: 12px;
   border: 0.5px solid #434343;
+  background-color: #fefefe;
 }
 
 .p-sidebar {
   padding: 8px;
   display: flex;
   flex-direction: column;
-}
-
-.p-terms {
-  line-height: 1.5;
-}
-
-.p-text__form {
-  position: relative;
 }
 
 .p-withdraw {
