--- a/resources/sass/Object/Component/_icon.scss
+++ b/resources/sass/Object/Component/_icon.scss
@@ -20,6 +20,8 @@
         padding: $space_s;
         border: 1px solid;
         border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
         color: $font-color_default;
     }
 }
