--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,7 +22,7 @@ $cyan: #6cb2eb;
 $font-color_default: #434343;
 $font-color_msg: #ff3333;
 $font-color_sub: #fefefe;
-
+$font-color_label: #ff2828;
 $font-color_like: #ff7fbf;
 $font-color_unlike: #ccc;
 
@@ -34,7 +34,6 @@ $background-color_btn_main: #ff2828;
 $background-color_btn_primary: #32cd32;
 $background-color_btn_default: #ffa500;
 $background-color_valid: #ffcccc;
-$background-color_label: #ff2828;
 $background-color_badge: #ff6666;
 
 $boader-color_line: #434343;
