--- a/resources/sass/Object/Component/_badge.scss
+++ b/resources/sass/Object/Component/_badge.scss
@@ -6,6 +6,8 @@
     text-align: center;
     vertical-align: middle;
     border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
     display: inline-block;
     color: $font-color_sub;
     font-size: $font-size_m;
