--- a/resources/sass/Object/Component/_panel.scss
+++ b/resources/sass/Object/Component/_panel.scss
@@ -3,6 +3,8 @@
     box-sizing: border-box;
     &__border {
         border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
         border: 5px solid $boader-color_sub;
     }
     &__head, &__foot {
