--- a/resources/sass/Object/Component/_password.scss
+++ b/resources/sass/Object/Component/_password.scss
@@ -6,5 +6,7 @@
         top: 50%;
         right: 16px;
         transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
     }
 }
