--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1375,6 +1375,8 @@ table {
 
 .c-product--avatar {
   width: 100px;
+  height: 100px;
+  margin-right: 16px;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
