--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -27,6 +27,8 @@
     }
     &--avatar {
         width: 100px;
+        height: 100px;
+        margin-right: $space_m;
         border-radius: 50%;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
