api.phpのルーティング修正、コントローラー名修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -747,6 +747,10 @@ table {
   }
 }
 
+.c-button--not-allowed:disabled {
+  cursor: not-allowed;
+}
+
 .c-button--register {
   padding: 8px;
   display: block;
