--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -31,8 +31,13 @@
         z-index: 1;
         cursor: pointer;
     }
-    &.is-invalid {
-        background-color: $background-color_valid;
+    &.is-valid { // バリデーション正常
+        background-color: $background-color_is_valid;
+        border: 2px solid $boader-color_is_valid;
+    }
+    &.is-invalid { // バリデーション異常
+        background-color: $background-color_is_invalid;
+        border: 2px solid $boader-color_is_invalid
     }
     &__search {
         width: 75%;
