--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -33,7 +33,9 @@ $background-color_sub: #434343;
 $background-color_btn_main: #ff2828;
 $background-color_btn_primary: #32cd32;
 $background-color_btn_default: #ffa500;
-$background-color_valid: #ffcccc;
+$background-color_valid: #ffcccc; // 【TODO】修正後、削除すること
+$background-color_is_valid: #cce6ff;
+$background-color_is_invalid: #ffcccc;
 $background-color_badge: #ff6666;
 
 $boader-color_line: #434343;
@@ -41,6 +43,9 @@ $boader-color_main: #ff2828;
 $boader-color_primary: #32cd32;
 $boader-color_default: #ffa500;
 $boader-color_sub: #f6f5f4;
+$boader-color_is_valid: #339cff;
+$boader-color_is_invalid: #ff3333;
+
 
 $site-width: 980px;
 
