マイページ（サイドバー）の文字の折り返し、Vuelidateを使ってフロントエンド側のバリデーション実装（プロフィール編集画面）

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1456,6 +1456,14 @@ table {
   }
 }
 
+.c-sidebar__username,
+.c-sidebar__address,
+.c-sidebar__introduction {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  max-width: 100%;
+}
+
 .c-sidebar__body {
   opacity: 0.7;
 }
