商品詳細画面、商品一覧画面の文字の折り返し修正（-webkit-line-clamp）

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -783,21 +783,16 @@ table {
 }
 
 .c-card__name {
+  max-height: 40px;
   max-width: 100%;
   font-weight: bold;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: normal;
-  /* 改行させるためにnormalを指定 */
+  overflow-wrap: break-word;
   word-wrap: break-word;
-  /* 単語単位で改行するために指定 */
+  text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  /* 最大の行数を指定 */
   -webkit-box-orient: vertical;
-  /* 縦方向に並べるように指定 */
-  max-height: 40px;
-  /* 高さの最大値を設定 */
 }
 
 .c-card__body {
@@ -1368,11 +1363,11 @@ table {
 }
 
 .c-product--item {
+  max-width: 100%;
   font-size: 16px;
   line-height: 1.5;
   overflow-wrap: break-word;
   word-wrap: break-word;
-  max-width: 100%;
 }
 
 .c-product__price--value {
@@ -1476,9 +1471,9 @@ table {
 .c-sidebar__username,
 .c-sidebar__address,
 .c-sidebar__introduction {
+  max-width: 100%;
   overflow-wrap: break-word;
   word-wrap: break-word;
-  max-width: 100%;
 }
 
 .c-sidebar__body {
