Vuelidateを使ってフロントエンド側のバリデーション実装（お問い合わせ画面）

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1566,8 +1566,14 @@ table {
   }
 }
 
+.c-textarea.is-valid {
+  background-color: #cce6ff;
+  border: 2px solid #339cff;
+}
+
 .c-textarea.is-invalid {
   background-color: #ffcccc;
+  border: 2px solid #ff3333;
 }
 
 .c-textarea--count {
