--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -55,7 +55,8 @@
         flex-direction: column;
         margin: $space_m;
     }
-    &--zip {
+    &--zip,
+    &__email {
         display: flex;
         justify-content: flex-end;
     }
